--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ html, body {
 html {
     overflow:auto;
     overflow-y: scroll;
-    min-width:70em;
 }
 
 body {
@@ -44,7 +43,7 @@ h1 i, h2 i {
 p {
     margin:0 0 1.5em 0;
     line-height: 1.8;
-    max-width:20em;
+    max-width:28em;
     font-size:2em;
 }
 
@@ -90,6 +89,7 @@ a:visited {
 a span {
     color:rgba(0,0,0,0.3);
     padding:0 0 0 .5em;
+    float: right;
 }
 
 a:hover span {
@@ -144,7 +144,11 @@ section {
 }
 
 section.alternate {
-    padding-left:50em;
+    padding:15em 15em 15em 63em;
+}
+
+section.alternate p {
+    max-width: 100%;
 }
 
 section.invert {
@@ -158,7 +162,12 @@ section.invert a {
 
 section.init {
     height: 100%;
-    padding-top:20em;
+}
+
+section .inner {
+    position: absolute;
+    left:15em;
+    bottom:10em;
 }
 
 section.one {
@@ -192,7 +201,8 @@ section.more a {
     color:#fff;
 }
 
-section.links {
+section.more a span {
+    float: none;
 }
 
 section.close {
@@ -200,15 +210,33 @@ section.close {
 }
 
 
-@media all and (max-width: 80em) {
-    body { font-size:8px; }
-    section.init { padding-top:40em; }
+@media all and (max-width: 85em) {
+    body { font-size:9px; }
 }
 
+@media all and (max-width: 75em) {
+    body { font-size:8px; }
+    section.init { height: auto; }
+    section .inner { position: static; }
+}
 
+@media all and (max-width: 65em) {
+    body { font-size:7px; }
+}
 
+@media all and (max-width: 55em) {
+    li a span { display: none; }
+    section.two { background-image:none; }
+    section.more { background-image:none; }
+    section.alternate { padding:10em 15em; }
+}
 
+@media all and (max-width: 50em) {
+    section, section.alternate { padding:8em; }
+    i { display: none !important; }
+    ol { margin:0; }
+}
 
-
-
-
+@media all and (max-width: 40em) {
+    section.one { background-image:none; }
+}
