--- a/css/style.css
+++ b/css/style.css
@@ -167,14 +167,14 @@ section .inner {
 }
 
 section.one {
-    background-image:url("../images/gun.png");
+    background-image:url("../images/gun.gif");
     background-color: #be2826;
     color:#fff;
 }
 
 section.two {
     background-position: top left;
-    background-image:url("../images/blue.png");
+    background-image:url("../images/blue.gif");
     background-color: #BBE5F9;
     color:#000;
 }
@@ -188,7 +188,7 @@ section.two a:hover {
 }
 
 section.more {
-    background-image: url("../images/what.png");
+    background-image: url("../images/what.gif");
     background-color: #3387c4;
     color:#fff;
 }
@@ -227,9 +227,9 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
 
-    section.one { background-image:url("../images/gun@2x.png"); }
-    section.two { background-image:url("../images/blue@2x.png"); }
-    section.more { background-image: url("../images/what@2x.png"); }
+    section.one { background-image:url("../images/gun@2x.gif"); }
+    section.two { background-image:url("../images/blue@2x.gif"); }
+    section.more { background-image: url("../images/what@2x.gif"); }
 
 }
 
