--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,3 @@
-@font-face {
-  font-family: 'Bangers';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Bangers'), local('Bangers-Regular'), url(../fonts/bangers.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Source Sans Pro Light'), local('SourceSansPro-Light'), url(../fonts/source.sans.pro.light.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Source Sans Pro';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(../fonts/source.sans.pro.bold.woff) format('woff');
-}
-
-/* --------------------------------------- */
-
 html, body {
     margin: 0;
     padding: 0;
@@ -56,7 +33,7 @@ h2 {
 }
 
 h1, h2 {
-    font-family: 'Bangers', sans-serif;
+    font-family: 'Bangers', cursive;
 }
 
 h1 i, h2 i {
