Normalize body font size using percentage instead

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     color:rgba(0,0,0,1);
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
-    font-size:10px;
+    font-size:62.5%;
 }
 
 h1 {
