--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ footer {
     background: #263238 url(../img/circle1.svg) 50% 50% no-repeat;
     background-size: auto 150%;
     text-align: center;
-    padding: 6rem 0;
+    padding: 6rem 0 10rem 0;
 }
 
 @media (min-width: 650px) {
@@ -231,37 +231,46 @@ figure a {
     width: 50%;
 }
 
-.smallHeader {
+aside {
+    display: block;
     position: fixed;
-    top: -5rem;
-    max-width: 1150px;
-    min-width: 650px;
+    bottom: -7rem;
+    left: 0;
+    right: 0;
     z-index: 999;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
+    background: #455A64;
+    -webkit-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    box-shadow: 0 0 1rem rgba(0,0,0,0.1);
 }
 
-.smallHeader a {
-    width: 10%;
+aside .inner {
+    display: table;
+    max-width: 1150px;
+    margin: 0 auto;
 }
 
-figure {
-    -webkit-transition: all 200ms ease-in;
-    transition: all 200ms ease-in;
+aside a {
+    display: table-cell;
+    width: auto;
+    float: none;
+}
+
+aside img {
+    display: block;
+    width: 100%;
+    box-shadow: none;
 }
 
 @media (min-width: 650px) {
-    .largeHeader a { width: 33.33%; }
-    .largeHeader a:first-child { display: none; }
-    .minifyHeader .smallHeader { top: 0; }
-    .minifyHeader .largeHeader { opacity: 0; }
+    figure a { width: 33.33%; }
+    figure a:first-child { display: none; }
 }
 
 @media (min-width: 900px) {
-    .largeHeader a { width: 20%; }
-    .largeHeader a:first-child { display: block; }
+    figure a { width: 20%; }
+    figure a:first-child { display: block; }
+    .minify aside { bottom: -1px; }
 }
 
 figure img {
@@ -275,15 +284,10 @@ figure img {
         box-shadow: 0 0 1rem rgba(17,23,26,0.5);
     }
 
-    .largeHeader a:nth-child(n+2):hover img {
+    figure a:nth-child(n+2):hover img {
         transform: translatey(-1rem);
     }
 }
-
-.smallHeader a:hover img {
-  transform: translatey(0.2rem);
-}
-
 
 section {
     position: relative;
